--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <li id="step2A">If the <code>current node</code> is <a class="termref">hidden</a> <strong>and is</strong>:
             <ul>
               <li><strong>Not</strong> part of an <code>aria-labelledby</code> or <code>aria-describedby</code> traversal, where the node directy referenced by that relation was hidden.</li>
-              <li><strong>Nor</strong> directly referenced by a native host language text alternative <a class="termref">element</a> (e.g. <code>label</code> in HTML) or <a class="termref">attribute</a>.</li>
+              <li><strong>Nor</strong> part of a native host language text alternative <a class="termref">element</a> (e.g. <code>label</code> in HTML) or <a class="termref">attribute</a> traversal, where the root of that traversal was hidden.<li>
             </ul>
             Return the empty string.
               <div><details>
